--- a/BI-Sarah et Emma.ipynb
+++ b/BI-Sarah et Emma.ipynb
@@ -2778,8 +2778,7 @@
    "id": "b21944fc",
    "metadata": {},
    "source": [
-    "#### Comparaison de nos variables qualitatives\n",
-    "\n",
+    "#### Comparaison de nos variables qualitatives et test Chi2\n",
     "Afin de pouvoir comparer nos variables qualitatives nous allons utiliser la méthode du Chi2. En effet, cette méthode permet d'évaluer si une différence observée entre les fréquences observées et les fréquences théoriques est statistiquement significative.Le test du chi2 est souvent utilisé dans les sciences sociales et la médecine pour déterminer si une association statistique existe entre deux variables catégoriques, telles que le sexe et une maladie, ou l'âge et un comportement de consommation.\n"
    ]
   },
@@ -2787,6 +2786,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ef8b0935",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "315e7413",
+   "metadata": {},
+   "source": [
+    "#### Comparaison de nos variables quantitatives et qualitatives avec la méthode ANOVA\n",
+    "\n",
+    "Afin de comparer des variables quantitatives et qualitatives entres elles nous allons utiliser la méthode ANOVA.Cette méthode sert à évaluer l'effet d'une ou plusieurs variables explicatives sur une variable réponse. Elle permet de déterminer si les différences observées dans la variable réponse peuvent être attribuées à des différences dans les valeurs des variables explicatives ou sont le résultat d'une variation aléatoire. Cette méthode est souvent utilisée en analyse statistique pour des expériences scientifiques, en marketing pour des tests d'hypothèses sur les produits ou les segments de marché, et en économie pour des études de marché.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2125f773",
    "metadata": {},
    "outputs": [],
    "source": []
